--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,7 @@
             android:background="@null"
             android:hint="@string/password"
             android:maxLines="1"
+            android:password="true"
             android:textColor="@android:color/black"
             android:textColorHint="#fff"
             android:textSize="@dimen/text_size_large"/>
