--- a/app/src/main/res/layout/pop_item_home.xml
+++ b/app/src/main/res/layout/pop_item_home.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 <android.support.v7.widget.RecyclerView
     android:id="@+id/recy_top"
     android:background="@mipmap/bg_one"
@@ -10,6 +10,7 @@
     android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recy_bottom"
+        android:background="#5d5d5d"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
