--- a/app/src/main/res/layout/pop_item_home.xml
+++ b/app/src/main/res/layout/pop_item_home.xml
@@ -10,7 +10,7 @@
     android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recy_bottom"
-        android:background="#5d5d5d"
+        android:background="#505d5d5d"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
