--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -26,19 +26,24 @@
           android:layout_width="@dimen/dp_26"
           android:layout_height="@dimen/dp_26"
           android:button="@null"
+          android:layout_weight="1"
           android:background="@mipmap/tab_home_bottom_shouyes"
           android:layout_marginLeft="32dp"
           android:layout_gravity="center"
+          android:layout_marginTop="@dimen/dp_10"
           android:layout_marginRight="35dp"
           />
       <RadioButton
           android:id="@+id/iamge2"
-          android:layout_width="@dimen/dp_34"
-          android:layout_height="@dimen/dp_35"
+          android:layout_width="@dimen/dp_26"
+          android:layout_height="@dimen/dp_26"
           android:button="@null"
+          android:layout_weight="1"
+          android:layout_marginTop="@dimen/dp_10"
           android:background="@mipmap/tab_home_bottom_quanzi"
-          android:layout_marginRight="@dimen/dp_42"
+          android:layout_marginRight="@dimen/dp_40"
           android:layout_gravity="center"
+
           />
 
       <RadioButton
@@ -46,7 +51,9 @@
           android:layout_width="@dimen/dp_55"
           android:layout_height="@dimen/dp_55"
           android:layout_gravity="center"
-          android:layout_marginRight="@dimen/dp_36"
+          android:layout_weight="1"
+          android:layout_marginTop="@dimen/dp_10"
+          android:layout_marginRight="@dimen/dp_33"
           android:background="@mipmap/tab_home_bottom_gouwuche"
           android:button="@null" />
       <RadioButton
@@ -54,8 +61,10 @@
           android:layout_width="@dimen/dp_26"
           android:layout_height="@dimen/dp_26"
           android:button="@null"
+          android:layout_weight="1"
+          android:layout_marginTop="@dimen/dp_10"
           android:background="@mipmap/tab_home_bottom_zhangdans"
-          android:layout_marginRight="@dimen/dp_35"
+          android:layout_marginRight="@dimen/dp_30"
           android:layout_gravity="center"
           />
       <RadioButton
@@ -63,8 +72,10 @@
           android:layout_width="@dimen/dp_26"
           android:layout_height="@dimen/dp_26"
           android:button="@null"
+          android:layout_weight="1"
+          android:layout_marginTop="@dimen/dp_10"
           android:background="@mipmap/tab_home_bottom_wode"
-          android:layout_marginRight="@dimen/dp_32"
+          android:layout_marginRight="@dimen/dp_30"
           android:layout_gravity="center"
           />
 
