--- a/app/src/main/res/layout/add_remove_view_layout.xml
+++ b/app/src/main/res/layout/add_remove_view_layout.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="60dp"
+    android:layout_width="@dimen/dp_80"
     android:layout_height="30dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/sub_tv"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_20"
+        android:layout_height="@dimen/dp_18"
         android:text="-"
         android:textSize="@dimen/sp_14"
         android:gravity="center"/>
     <TextView
         android:id="@+id/product_number_tv"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="@dimen/dp_31"
+
         android:layout_height="@dimen/dp_18"
         android:text="1"
         android:textSize="@dimen/sp_12"
-        android:background="#666666"
+        android:background="#d8d8d8"
         android:gravity="center"/>
     <TextView
         android:id="@+id/add_tv"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_20"
+
+        android:layout_height="@dimen/dp_18"
         android:text="+"
         android:textSize="@dimen/sp_14"
         android:gravity="center"/>
