--- a/app/src/main/res/layout/myfragment_layout.xml
+++ b/app/src/main/res/layout/myfragment_layout.xml
@@ -7,19 +7,7 @@
     android:clipToPadding="true"
     android:background="@mipmap/bg_wdf">
 
-  <ImageView
-      android:id="@+id/mine_icon"
-      android:layout_width="@dimen/dp_80"
-      android:layout_height="@dimen/dp_80"
-      android:layout_alignParentTop="true"
-      android:layout_centerHorizontal="true"
-      android:layout_marginTop="106dp"
-      android:background="@drawable/shape_image_wd"
-      app:layout_constraintHorizontal_bias="0.46"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -192,7 +180,24 @@
         android:layout_marginRight="@dimen/dp_24"
         />
   </LinearLayout>
-
+  <com.facebook.drawee.view.SimpleDraweeView
+      android:id="@+id/mine_icon"
+      android:layout_width="@dimen/dp_80"
+      android:layout_height="@dimen/dp_80"
+      android:layout_alignParentTop="true"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="106dp"
+      app:roundAsCircle="true"
+      app:actualImageScaleType="centerCrop"
+      app:roundingBorderColor="#fff3cf44"
+      app:roundingBorderWidth="2dp"
+      app:fadeDuration="3000"
+      android:background="@drawable/shape_image_wd"
+      app:layout_constraintHorizontal_bias="0.46"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
 
 </RelativeLayout>
