--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -1,69 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/dp_24"
+    android:paddingRight="@dimen/dp_24"
     tools:context=".SubmitActivity">
-   <Button
-       android:text="暂无收货地址，点击添加"
-       android:layout_width="@dimen/dp_312"
-       android:layout_height="@dimen/dp_40"
-       android:layout_marginTop="@dimen/dp_40"
-       android:layout_gravity="center"
-       android:background="@drawable/add_address_goods"
-       android:textColor="#ff5f71"
-       />
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="@dimen/dp_20"
-        android:id="@+id/sub_recy"
-        android:layout_weight="5"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/viewpage_background"
-        android:layout_marginLeft="@dimen/dp_24"
-        android:layout_marginRight="@dimen/dp_24"
-        ></android.support.v7.widget.RecyclerView>
+    <Button
+        android:id="@+id/addAddress"
+        android:layout_width="@dimen/dp_312"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginBottom="@dimen/dp_20"
+        android:text="暂无收货地址 点击添加"
+        android:textColor="#ff5f71"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/shopping_but_addr"
+        />
     <LinearLayout
+        android:id="@+id/saddAddress"
         android:layout_width="match_parent"
-        android:layout_weight="1"
+        android:layout_height="@dimen/dp_40"
+
         android:orientation="horizontal"
-        android:background="@drawable/viewpage_background"
-        android:layout_height="0dp">
+        android:visibility="invisible"
+        android:background="@drawable/shopping_but_addr"
+        android:layout_marginTop="@dimen/dp_30"
+        >
         <LinearLayout
+            android:id="@+id/popup_two"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:layout_width="@dimen/dp_242"
-            android:layout_height="@dimen/dp_50">
-            <TextView
-                android:id="@+id/goods_num"
-                android:text="共2件商品"
-                android:textSize="@dimen/sp_14"
-                android:textColor="#666666"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/dp_20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/goods_pay"
-                android:text="，需付款2190元"
-                android:textSize="@dimen/sp_14"
-                android:textColor="#666666"
-                android:layout_gravity="center_vertical"
-                android:layout_toRightOf="@id/goods_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            >
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_marginRight="@dimen/dp_16"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+
+                        />
+                    <TextView
+                        android:id="@+id/phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="18931077675"
+                        android:textSize="@dimen/sp_12"
+                        />
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/addr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="地址-啦啦啦啦啦啦啦啦奥啦啦啦绿绿绿绿绿绿"
+                    android:textSize="@dimen/sp_12"
+                    />
+            </LinearLayout>
         </LinearLayout>
 
-        <Button
-            android:layout_width="@dimen/dp_118"
-            android:layout_height="@dimen/dp_50"
-            android:textSize="@dimen/sp_16"
-            android:background="#ff5e70"
-            android:text="提交订单"
-            android:layout_gravity="center"
-            android:textColor="#fff"
-            />
     </LinearLayout>
-</LinearLayout>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingRight="@dimen/dp_10"
+        android:paddingTop="@dimen/dp_20"
+        android:layout_below="@id/addAddress"
+        android:background="@drawable/shopping_but_addr"
+
+        >
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/allordersRecycle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            ></android.support.v7.widget.RecyclerView>
+
+    </android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_50"
+        android:background="@drawable/shape_price_tjdd"
+        android:layout_alignParentBottom="true"
+        >
+        <TextView
+            android:id="@+id/relativeTv4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="共"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="@dimen/dp_15"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/allordersCount"
+            android:textColor="#f00"
+            android:text="2"
+            android:layout_marginTop="@dimen/dp_15"
+            android:layout_toRightOf="@id/relativeTv4"
+            />
+        <TextView
+            android:id="@+id/relativeTv5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_15"
+            android:layout_toRightOf="@id/allordersCount"
+            android:text="件商品，需付款"
+            />
+        <TextView
+            android:id="@+id/allordersPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/relativeTv5"
+            android:text="840.00"
+            android:textColor="#f00"
+            android:layout_marginTop="@dimen/dp_15"
+            />
+        <TextView
+            android:id="@+id/yuan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="元"
+            android:layout_marginTop="@dimen/dp_15"
+            android:layout_toRightOf="@id/allordersPrice"
+            />
+        <TextView
+            android:id="@+id/tjdd"
+            android:layout_width="@dimen/dp_100"
+            android:layout_height="@dimen/dp_50"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/qujiesuan"
+            android:text="提交订单"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/sp_16"
+            />
+    </RelativeLayout>
+</RelativeLayout>
