--- a/app/src/main/res/layout/allorders_layout.xml
+++ b/app/src/main/res/layout/allorders_layout.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
-    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
-    android:text="全部订单"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+
+
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:id="@+id/recycleview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.jcodecraeer.xrecyclerview.XRecyclerView>
 </LinearLayout>
