--- a/app/src/main/res/layout/orderfragment_layout.xml
+++ b/app/src/main/res/layout/orderfragment_layout.xml
@@ -91,7 +91,7 @@
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:text="代付款"
+          android:text="待付款"
           android:textSize="@dimen/sp_12"
           android:textColor="@color/text_color_six"
           android:gravity="center"
@@ -113,6 +113,7 @@
           android:textSize="@dimen/sp_12"
           android:textColor="@color/text_color_six"
           android:gravity="center"
+
           />
       <TextView
           android:layout_width="0dp"
@@ -127,6 +128,7 @@
     </LinearLayout>
   </LinearLayout>
   <android.support.v4.view.ViewPager
+      android:layout_marginTop="@dimen/dp_15"
       android:layout_width="match_parent"
       android:id="@+id/purchaseViewPage"
       android:layout_height="match_parent"
